--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,7 @@ AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 AC_PROG_CC_C99
 AC_PROG_CC_C_O
 AC_PROG_LIBTOOL
+AC_PROG_SED
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
 AC_OUTPUT
