Outsourcing some import/export code to common header param.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,4 +44,4 @@ AM_CFLAGS = -Wall -Wextra -pedantic -D_GNU_SOURCE=1 -DHILBERT_THREADSAFE=1
 AM_LDFLAGS = -lpthread -export-symbols-regex "^(hilbert_|HILBERT_|Hilbert).*"
 include_HEADERS = hilbert.h
 lib_LTLIBRARIES = libhilbert.la
-libhilbert_la_SOURCES = cl/*.h threads/*.h private.h export.c import.c kind.c misc.c module.c object.c
+libhilbert_la_SOURCES = cl/*.h threads/*.h private.h param.h export.c import.c kind.c misc.c module.c object.c
