Added and enhanced tests for variable support

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -20,7 +20,10 @@
 #     on wiki : http://www.wikiproofs.org/w/index.php?title=User_talk:GrafZahl
 #
 
-TESTNAMES = module immutable ancillary kind_create kind_alias kind_id kind_eq vkind_create vkind_alias vkind_id vkind_eq eqc veqc kind_vs_vkind objecttype param import export getobjects object_getparam object_getsource object_getsourcehandle object_getdesthandle
+TESTNAMES = module immutable ancillary \
+	    kind_create kind_alias kind_id kind_eq vkind_create vkind_alias vkind_id vkind_eq eqc veqc kind_vs_vkind \
+	    var_create var_getkind \
+	    objecttype param import export getobjects object_getparam object_getsource object_getsourcehandle object_getdesthandle
 check_PROGRAMS = $(TESTNAMES)
 AM_CFLAGS = -I../src/
 AM_LDFLAGS = -L../src/ -lhilbert
