--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 #
 #  The Hilbert Kernel Library, a library for verifying formal proofs.
-#  Copyright © 2011 Alexander Klauer
+#  Copyright © 2011, 2012 Alexander Klauer
 #
 #  This program is free software: you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
